src/test/deca/syntax/invalid/resultats/test44_attribute-lex.res
'class': [@0,343:347='class',<7>,15:0]
IDENT: [@1,349:349='A',<26>,15:6]
'{': [@2,351:351='{',<36>,15:8]
IDENT: [@3,354:359='public',<26>,16:1]
IDENT: [@4,361:366='string',<26>,16:8]
IDENT: [@5,368:368='i',<26>,16:15]
';': [@6,369:369=';',<39>,16:16]
'}': [@7,371:371='}',<37>,17:0]
